feat: change description and websites

--- a/package.json
+++ b/package.json
@@ -69,15 +69,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sungik-choi/gatsby-starter-apple.git"
+    "url": "https://github.com/Sukyeong-hyu/reason-to-code.git"
   },
   "keywords": [
     "gatsby"
   ],
-  "author": "Sungik Choi <sungik.dev@gmail.com> (http://sungikchoi.com/)",
+  "author": "Sukyeong Park <zztnrudzz13@naver.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sungik-choi/gatsby-starter-apple/issues"
+    "url": "https://github.com/Sukyeong-hyu/reason-to-code/issues"
   },
-  "homepage": "https://github.com/sungik-choi/gatsby-starter-apple#readme"
+  "homepage": "https://github.com/Sukyeong-hyu/reason-to-code.git"
 }
