--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dark-theme-github": "github:remorses/dark-github-theme",
     "gatsby": "^4.5.4",
     "gatsby-plugin-feed": "^4.4.0",
+    "gatsby-plugin-google-gtag": "^4.16.0",
     "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
     "gatsby-plugin-offline": "^5.4.0",
